iac/busybox-a.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox-a
  namespace: secure-apps
spec:
  containers:
  - name: bb
    image: busybox
    command: ["sleep", "3600"]
