iac/busybox-b.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox-b
  namespace: secure-apps
spec:
  containers:
  - name: bb
    image: busybox
    command: ["sleep", "3600"]
